# rubric_gen

./: .gitignore  README.md  RESEARCH.md  download_biomni.py  perturb_da124_l1.py  pyproject.toml  setup.sh
docs/superpowers/plans/: 2026-07-12-task-specific-process-rubric.md  2026-07-13-biomnibench-self-improvement-loop.md
docs/superpowers/specs/: 2026-07-12-task-specific-process-rubric-design.md  2026-07-13-biomnibench-self-improvement-loop-design.md  2026-07-13-biomnibench-submission-revision-loop-design.md  2026-07-13-revision-progress-only-output-design.md  2026-07-17-deep-repository-refactor-design.md
runs/biomnibench-reports/experiment--t-da-1-1--fb-full--mtg-none--n-0--p-gemini--m-test-model--j-default--rb-default--v-trajectory--sb-0--st-1--web-0--ap-default--mc-all--x-default--raw-0/: summary.json
runs/biomnibench-reports/revision-20260722-163539--da-10-1/: summary.json
runs/biomnibench-reports/revision-20260722-163539--da-10-3/: summary.json
runs/biomnibench-reports/revision-20260722-163539--da-12-2/: summary.json
runs/biomnibench-reports/revision-20260722-163633--da-10-1/: summary.json
scripts/: plot_exploitation.py  run_biomnibench_agents.py
src/rubric_gen/: __init__.py
src/rubric_gen/biomnibench/: __init__.py  (+22 more)
tests/: test_biomnibench_agents.py  test_external_rubric_judge.py  test_malt_forensics.py  test_reward_hacking_audit.py  test_rubric_generator.py  test_rubric_scoring.py  test_session_drivers.py  test_strong_verifier.py  test_submission_revision.py  test_submission_revision_judge.py  test_task_rubric_compiler.py  test_task_rubrics.py
(+56 files in other folders)
