[project]
name = "rubric-gen"
version = "0.1.0"
description = "Tools for running, perturbing, judging, and revising BiomniBench-DA agent experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "pyarrow>=18.0",
  "tqdm>=4.66",
]

[project.scripts]
biomnibench-agent = "rubric_gen.biomnibench.cli:main"
malt = "rubric_gen.malt.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rubric_gen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
